--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
+
     </head>
     <body>
-        <h1>index.html</h1>
+        <div class="content">
+
+            <div class="input-block">
+
+                <h2>Metric/Imperial unit conversion</h2>
+
+                <!--<input type="number" id="user-input"
+                 value="0" ondrop="return false;" onpaste="return false;" min="0"> -->
+                <span id="user-input" contenteditable>0</span>
+
+            </div>
+            <div class="result-block">
+                <p>Length (Meter/Feet)</p>
+                <p class="result-text"></p>
+
+                <p>Volume (Liters/Gallons)</p>
+                <p class="result-text"></p>
+
+                <p>Mass (Kilograms/Pounds)</p>
+                <p class="result-text"></p>
+            </div>
+            
+        </div>
+        
         <script src="index.js"></script>
     </body>
 </html>
