on input event listener added + essential variables

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
                 <h2>Metric/Imperial unit conversion</h2>
 
-                <!--<input type="number" id="user-input"
-                 value="0" ondrop="return false;" onpaste="return false;" min="0"> -->
-                <span id="user-input" contenteditable>0</span>
+                <input type="number" id="user-input"
+                 value="0" ondrop="return false;" onpaste="return false;"  min=0 max=999> 
+                <!--<span id="user-input" contenteditable>0</span>-->
 
             </div>
             <div class="result-block">
                 <p>Length (Meter/Feet)</p>
-                <p class="result-text"></p>
+                <p class="result-text" ></p>
 
                 <p>Volume (Liters/Gallons)</p>
                 <p class="result-text"></p>
