calculatin and printing the results

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
             </div>
             <div class="result-block">
-                <p>Length (Meter/Feet)</p>
-                <p class="result-text" ></p>
+                <p class="fixed-text">Length (Meter/Feet)</p>
+                <p class="result-text" >0 meters = 0.000 feet | 0 feet = 0.000 meters</p>
 
-                <p>Volume (Liters/Gallons)</p>
-                <p class="result-text"></p>
+                <p class="fixed-text">Volume (Liters/Gallons)</p>
+                <p class="result-text">0 liters = 0.000 gallons | 0 gallons = 0.000 liters</p>
 
-                <p>Mass (Kilograms/Pounds)</p>
-                <p class="result-text"></p>
+                <p class="fixed-text">Mass (Kilograms/Pounds)</p>
+                <p class="result-text">0 kilos = 0.000 pounds | 0 pounds = 0.000 kilos</p>
             </div>
             
         </div>
